A fix (Bug #4237: Server crash with a subquery SELECT). Original test case was too big to add it. Unfortunately I didn't manage to reduce it.